Minor edits to word2vec presentation.

--- a/vpcoe_march2016/vpcoe_presentation.ipynb
+++ b/vpcoe_march2016/vpcoe_presentation.ipynb
@@ -312,7 +312,8 @@
     "### Sentiment Analysis\n",
     "Same health example as before but with classes as positive negative sentiment.\n",
     "\n",
-    "### Named Entity Recognition"
+    "### Named Entity Recognition\n",
+    "Example: The prices of *XYZ corporation* tanked by more than 30% on *new york stock exchange*."
    ]
   },
   {
@@ -408,7 +409,7 @@
     }
    },
    "source": [
-    "> -- <cite>All images from Quoc V. Le tutorial on deep learning'</cite>"
+    "> -- <cite>All images from Quoc V. Le tutorial on deep learning</cite>"
    ]
   },
   {
@@ -416,6 +417,7 @@
    "execution_count": 13,
    "metadata": {
     "collapsed": false,
+    "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
     }
