scipy cosine distance doesn't need normalization, add assertion/test.

--- a/fifth_elephant_july2017/src/intro_to_recommenders.ipynb
+++ b/fifth_elephant_july2017/src/intro_to_recommenders.ipynb
@@ -154,8 +154,8 @@
     }
    ],
    "source": [
-    "part_1_2 = stats.poisson.rvs(8, size=5) # Customer 1 gives higher ratings to first 5 movies / products\n",
-    "part_2_2 = stats.poisson.rvs(2, size=5) # Customer 1 gives higher ratings to last 5 movies / products\n",
+    "part_1_2 = stats.poisson.rvs(8, size=5) # Customer 2 gives higher ratings to first 5 movies / products\n",
+    "part_2_2 = stats.poisson.rvs(2, size=5) # Customer 2 gives lower ratings to last 5 movies / products\n",
     "cust_2 = np.hstack([part_1_2, part_2_2])\n",
     "print cust_2"
    ]
@@ -176,24 +176,10 @@
     }
    ],
    "source": [
-    "part_1_3 = stats.poisson.rvs(2, size=5) # Customer 1 gives higher ratings to first 5 movies / products\n",
-    "part_2_3 = stats.poisson.rvs(8, size=5) # Customer 1 gives higher ratings to last 5 movies / products\n",
+    "part_1_3 = stats.poisson.rvs(2, size=5) # Customer 3 gives lower ratings to first 5 movies / products\n",
+    "part_2_3 = stats.poisson.rvs(8, size=5) # Customer 3 gives higher ratings to last 5 movies / products\n",
     "cust_3 = np.hstack([part_1_3, part_2_3])\n",
     "print cust_3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import normalize\n",
-    "cust_1_norm = cust_1/np.linalg.norm(cust_1, ord=1)\n",
-    "cust_2_norm = cust_1/np.linalg.norm(cust_2, ord=1)\n",
-    "cust_3_norm = cust_1/np.linalg.norm(cust_3, ord=1)"
    ]
   },
   {
@@ -219,48 +205,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.02272727,  0.04545455,  0.02272727,  0.02272727,  0.04545455,\n",
-       "        0.25      ,  0.09090909,  0.13636364,  0.15909091,  0.20454545])"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cust_1_norm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.02272727,  0.04545455,  0.02272727,  0.02272727,  0.04545455,\n",
-       "        0.25      ,  0.09090909,  0.13636364,  0.15909091,  0.20454545])"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cust_2_norm"
+    "assert(distance.cosine(cust_1, cust_2) > distance.cosine(cust_1, cust_3) )"
    ]
   },
   {
